definitions/console/networkpolicy-ingress.yaml
#
# Copyright contributors to the Hyperledger Fabric Operator project
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
# 	  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy-ingress
spec:
  ingress:
    - from: [] # everywhere
      ports:
        - port: 7051 # peer-api
          protocol: TCP
        - port: 9443 # peer-operations / ca-operations
          protocol: TCP
        - port: 7443 # peer-grpcweb / orderer-grpcweb
          protocol: TCP
        - port: 7052
          protocol: TCP # peer-chaincode
        - port: 3000 # optools
          protocol: TCP
        - port: 7050 # orderer-grpc
          protocol: TCP
        - port: 8443 # orderer-operations
          protocol: TCP
        - port: 22222 # fileserver #check install/invoke chaincode
          protocol: TCP
        - port: 11111 # grpc #check install/invoke chaincode
          protocol: TCP
        - port: 7054 # ca
          protocol: TCP
      # - port: 443 # tcp
      #   protocol: TCP
      # - port: 8080 # tcp
      #   protocol: TCP
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
